grafana/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  selector:
    matchLabels:
      app: "grafana"
  replicas: 1
  template:
    metadata:
      labels:
        app: "grafana"
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: "1234@Tpsx"         #pass login
        - name: GF_USERS_ALLOW_SIGN_UP
          value: "false"
        - name: GF_SMTP_ENABLED
          value: "true"
        - name: GF_SMTP_HOST
          value: smtp.gmail.com:587
        - name: GF_SMTP_USER
          value: tmtdtuctf@gmail.com  # user email
        - name: GF_SMTP_PASSWORD
          value: "Anhtu97199797"         # password email
        - name: GF_SMTP_FROM_ADDRESS
          value: grafana_k8s@gmail.com     # user email
        - name: GF_SMTP_FROM_NAME
          value: Grafana Alert
        image: grafana/grafana
        imagePullPolicy: Always
        name: "grafana"
        ports:
        - containerPort: 3000
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: servicelabel
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: "grafana"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.labdevops.one
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
            path: /
  tls:
    - hosts:
      - grafana.labdevops.one
      secretName: grafana-tls
